refactor: 여행계획 조회 메서드가 페이징된 리스트 반환하게 수정